Eevee Bake Indirect Lighting crash in 2.93 (file saved from 2.92) #86138

Closed
opened 2021-03-01 15:02:58 +01:00 by Philipp Oeser · 6 comments
Member

System Information
Operating system: Linux-5.10.12-200.fc33.x86_64-x86_64-with-glibc2.32 64 Bits
Graphics card: GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 455.45.01

Blender Version
Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-03-01 00:00, hash: fc08fe82ae
Worked: (newest version of Blender that worked as expected)

Short description of error
Eevee Bake Indirect Lighting crash in 2.93 (if done on a file saved from 2.92)

Exact steps for others to reproduce the error
irradiance_bake_crash.blend

  • Open file
  • Bake Indirect Lighting
  • crash

cell_per_row / cell_per_col end up being 0 which causes trouble dividing

1 EEVEE_lightbake_filter_visibility  eevee_lightprobes.c 1181 0x3d17c9e      
2 eevee_lightbake_render_grid_sample eevee_lightcache.c  1161 0x3d11ca1      
3 DRW_custom_pipeline                draw_manager.c      2014 0x3cf59fc      
4 lightbake_do_sample                eevee_lightcache.c  1359 0x3d12cfe      
5 EEVEE_lightbake_job                eevee_lightcache.c  1440 0x3d13011      
6 do_job_thread                      wm_jobs.c           389  0x3a38175      
7 tslot_thread_start                 threads.cc          231  0xf149f5d      
8 start_thread                                                0x7ffff7f693f9 
9 clone     
```                                                  0x7ffff78e1b53 


**System Information** Operating system: Linux-5.10.12-200.fc33.x86_64-x86_64-with-glibc2.32 64 Bits Graphics card: GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 455.45.01 **Blender Version** Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-03-01 00:00, hash: `fc08fe82ae` Worked: (newest version of Blender that worked as expected) **Short description of error** Eevee Bake Indirect Lighting crash in 2.93 (if done on a file saved from 2.92) **Exact steps for others to reproduce the error** [irradiance_bake_crash.blend](https://archive.blender.org/developer/F9856626/irradiance_bake_crash.blend) - Open file - Bake Indirect Lighting - crash cell_per_row / cell_per_col end up being 0 which causes trouble dividing ``` 1 EEVEE_lightbake_filter_visibility eevee_lightprobes.c 1181 0x3d17c9e 2 eevee_lightbake_render_grid_sample eevee_lightcache.c 1161 0x3d11ca1 3 DRW_custom_pipeline draw_manager.c 2014 0x3cf59fc 4 lightbake_do_sample eevee_lightcache.c 1359 0x3d12cfe 5 EEVEE_lightbake_job eevee_lightcache.c 1440 0x3d13011 6 do_job_thread wm_jobs.c 389 0x3a38175 7 tslot_thread_start threads.cc 231 0xf149f5d 8 start_thread 0x7ffff7f693f9 9 clone ``` 0x7ffff78e1b53
Author
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Author
Member

Added subscriber: @fclem

Added subscriber: @fclem
Author
Member

CC @fclem , was trying to investigate #86042 (EEVEE 2.93 incorrect irradiance bake), but even the simplest case saved from 2.92 results in a crash in 2.93, mind checking?

CC @fclem , was trying to investigate #86042 (EEVEE 2.93 incorrect irradiance bake), but even the simplest case saved from 2.92 results in a crash in 2.93, mind checking?

This issue was referenced by b9e1cc931e

This issue was referenced by b9e1cc931ee901b153a0c3bb59fa36df6bc7b12d

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Clément Foucault self-assigned this 2021-03-02 13:56:45 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#86138
No description provided.