Fix T86138 EEVEE: Bake Indirect Lighting crash in 2.93 with older files

This was caused by a missing version check.